k8s-security-framework/policies/resource-governance/KSP-RES-001/tests/positive-two-containers-with-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-res-001-positive-two-resource
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      resources:
        requests:
          cpu: 100m
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
      resources:
        requests:
          cpu: 100m
